[tool.poetry]
name = "python-lambda-template"
version = "0.1.0"
description = "Python AWS Lambda template"
authors = ["Jireh Huang <ijirehhuang@gmail.com>"]
readme = "README.md"
packages = [{ include = "PACKAGE" }]

[tool.poetry.dependencies]
python = "^3.12"

[tool.poetry.group.dev.dependencies]
black = "^24.4.2"
ruff = "^0.4.7"
flake8 = "^7.1.0"
mypy = "^1.8.0"
pylint = "^3.2.7"
pytest = "^8.2.0"
pytest-cov = "^5.0.0"
commitizen = "^3.27.0"
pre-commit = "^3.6.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

# -------------------
# Tool Configurations
# -------------------

[tool.black]
line-length = 79
target-version = ["py312"]

[tool.ruff]
line-length = 79
select = ["E", "F", "W", "B", "UP"]
ignore = []
exclude = ["tests/"]

[tool.flake8]
max-line-length = 79
extend-ignore = ["E203", "W503"]

[tool.mypy]
python_version = "3.12"
warn_unused_configs = true
disallow_untyped_defs = true
strict = true
ignore_missing_imports = true
exclude = ["tests/"]

[tool.pylint.'MESSAGES CONTROL']
disable = ["C0114", "C0115", "C0116"]  # allow missing docstrings in tests
max-line-length = 79

[tool.commitizen]
name = "cz_conventional_commits"
version = "0.1.0"
tag_format = "v$version"
update_changelog_on_bump = true

[tool.pytest.ini_options]
addopts = "-v --cov=PACKAGE --cov-report=term-missing --cov-report=xml:coverage.xml"
testpaths = ["tests"]
